modify docker file

--- a/Solution Items/Dockerfile
+++ b/Solution Items/Dockerfile
@@ -1,22 +1,16 @@
-# Use the official ASP.NET Core runtime as a base image
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-# Use the official ASP.NET Core SDK image to build the app
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
+WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["SmsApi/SmsApi.csproj", "SmsApi/"]
-RUN dotnet restore "SmsApi/SmsApi.csproj"
+RUN dotnet restore "./SmsApi/SmsApi.csproj"
 COPY . .
 WORKDIR "/src/SmsApi"
-RUN dotnet build "SmsApi.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "SmsApi.csproj" -c Release -o /app/publish
-
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "SmsApi.dll"]
+RUN dotnet build "./Sms
